Correct form alignement

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ body {
 
 main {
   background: none repeat scroll 0 0 white;
-  margin: 100px auto 0;
+  margin: 175px auto 0;
   padding: 0 0 25px 0;
   border-radius: 5px;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5); }
